# command_guardian

./: .gitignore  DEVELOPMENT.md  README.md  README_CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
openspec/changes/archive/2026-02-07-document-ipc-conventions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-07-document-ipc-conventions/specs/error-handling/: spec.md
openspec/changes/archive/2026-02-07-document-ipc-conventions/specs/ipc-protocol/: spec.md
openspec/changes/archive/2026-02-07-document-ipc-conventions/specs/state-concurrency/: spec.md
openspec/changes/archive/2026-02-07-fix-terminal-event-typing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-07-fix-terminal-event-typing/specs/terminal-output-typing/: spec.md
openspec/changes/fix-delete-functionality/: design.md  proposal.md  tasks.md
openspec/changes/fix-delete-functionality/specs/state-concurrency/: spec.md
openspec/changes/fix-delete-functionality/specs/task-deletion/: spec.md
openspec/specs/error-handling/: spec.md
openspec/specs/ipc-protocol/: spec.md
openspec/specs/state-concurrency/: spec.md
openspec/specs/terminal-output-typing/: spec.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  models.rs  state.rs
src/components/: TerminalView.tsx
